--- a/app/src/main/res/layout-night/activity_recipe.xml
+++ b/app/src/main/res/layout-night/activity_recipe.xml
@@ -89,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:text=""
-                    android:textColor="@color/colorPrimaryText"
+                    android:textColor="?attr/colorControlNormal"
                     android:textSize="30sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +113,7 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="30dp"
                     android:text=""
-                    android:textColor="@color/colorPrimaryText"
+                    android:textColor="?attr/colorControlNormal"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toStartOf="@+id/tvTime"
                     app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +126,7 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="20dp"
                     android:text=""
-                    android:textColor="@color/colorPrimaryText"
+                    android:textColor="?attr/colorControlNormal"
                     android:textSize="20sp"
                     android:textStyle="italic"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -140,7 +140,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="10dp"
                     android:text=""
-                    android:textColor="@color/colorPrimaryText"
+                    android:textColor="?attr/colorControlNormal"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
