--- a/app/src/main/res/layout-night/smart_rating_dialog.xml
+++ b/app/src/main/res/layout-night/smart_rating_dialog.xml
@@ -57,6 +57,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:hint="@string/what_should_we_improve"
+        android:visibility="gone"
         app:endIconMode="clear_text"
         app:endIconTint="@color/colorPrimary"
         app:errorEnabled="true"
